@@ -1,3 +1,6 @@
+2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Fix: save previous order
+
 2013-03-15 Emilie SAGNIEZ  <emilie@in-cite.net>
 	* First version stable
 	* Initial import
