@@ -1,3 +1,6 @@
+2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add new order type
+	
 2013-04-18 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Use Isotope library to masonry theme
 
