@@ -1,3 +1,6 @@
+2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Remove isotope Sortby random => not compatibility with lightbox order
+	
 2013-04-18 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Use Isotope library to masonry theme
 	
